
option java_outer_classname="RemoveResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message RemoveResponse {
	optional int32 flag = 1;
	repeated bytes value = 2;
}